--- a/client/src/components/ui/UserPreview/styles.css
+++ b/client/src/components/ui/UserPreview/styles.css
@@ -5,7 +5,7 @@
 }
 
 .user-card:hover {
-    background-color: rgba(255, 255, 255, 0.03);
+    background-color: var(--tweet-hover);
 }
 
 .user-card_pfp {
