--- a/client/src/components/ui/TweetFormActions/styles.css
+++ b/client/src/components/ui/TweetFormActions/styles.css
@@ -23,17 +23,7 @@
     /* padding: 0.5rem; */
     width: 33px;
     height: 33px;
-    /* border-radius: 50%; */
-    /* margin-right: 0.4rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: background-color 0.1s linear; */
 }
-/* 
-.tweet-attachments_button:hover {
-    background-color: rgba(29, 155, 240, 0.2);
-} */
 
 .tweet-attachments_button .icon-container {
     width: 18px;
@@ -45,7 +35,7 @@
 }
 
 .tweet-attachments_button:disabled:hover .icon-container::after {
-    background-color: rgba(29, 155, 240, 0.1);
+    background-color: var(--accent-hover);
 }
 
 .tweet-attachments_button:disabled .tweet-attachments_icon {
@@ -60,8 +50,16 @@
 
 .tweet-submit .separator {
     height: 25px;
-    width: 2px;
-    background-color: rgb(62, 65, 68);
+    width: 1px;
+    background-color: var(--grey);
     border-radius: 99999rem;
     margin: 0 0.7rem;
 }
+
+/* .progressbar-container .CircularProgressbar-trail {
+    stroke: var(--grey) !important;
+}
+
+.progressbar-container .CircularProgressbar-path {
+    stroke: var(--primary-colour) !important;
+} */
