--- a/client/src/components/ui/FloatOptions/styles.css
+++ b/client/src/components/ui/FloatOptions/styles.css
@@ -8,14 +8,14 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #000;
+    background-color: var(--background);
     border-radius: 1rem;
-    box-shadow: rgba(255, 255, 255, 0.2) 0px 0px 15px,
-        rgba(255, 255, 255, 0.15) 0px 0px 3px 1px;
+    box-shadow: 0 0 15px rgba(101, 119, 134, 0.2),
+        0 0 3px 1px rgba(101, 119, 134, 0.15);
     overflow: hidden;
 }
 
-.float-options::before {
+/* .float-options::before {
     content: "";
     position: fixed;
     z-index: -11111;
@@ -23,9 +23,10 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-}
+} */
 
 .float-options .float-btn {
+    color: var(--text-primary);
     text-align: start;
     padding: 0.75rem 1rem;
     transition-property: background-color, box-shadow 0.2s;
