--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -266,6 +266,7 @@ select {
     display: flex;
     flex-direction: column;
     padding: 0 0.5rem;
+    z-index: 999;
 }
 
 .logo-container {
@@ -361,7 +362,7 @@ select {
     width: 100%;
     margin: 0;
     margin-top: auto !important;
-    margin-bottom: 0.9rem;
+    margin-bottom: 0.5rem;
     padding: 0.7rem 0.7rem;
     border-radius: 999rem;
     cursor: pointer;
@@ -520,7 +521,7 @@ img.pfp {
 }
 
 #widgets .searchbar {
-    margin: 0.5rem 0 1rem 0;
+    margin-bottom: 1rem;
 }
 
 /* Buttons */
@@ -1031,4 +1032,10 @@ img.pfp {
 .logo.light {
     filter: brightness(0) saturate(100%) invert(59%) sepia(50%) saturate(5397%)
         hue-rotate(179deg) brightness(99%) contrast(90%);
+}
+
+.toast-view-link {
+    color: #fff;
+    text-decoration: underline;
+    text-underline-offset: 2px;
 }
