--- a/client/src/components/ui/FloatOptions/styles.css
+++ b/client/src/components/ui/FloatOptions/styles.css
@@ -4,7 +4,7 @@
     height: auto;
     width: 250px;
     position: absolute;
-    z-index: 99999999;
+    z-index: 999999999;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -15,33 +15,36 @@
     overflow: hidden;
 }
 
-/* .float-options::before {
-    content: "";
+.float-options_overlay {
     position: fixed;
-    z-index: -11111;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
-} */
+    right: 0;
+    bottom: 0;
+    z-index: 9998;
+}
 
 .float-options .float-btn {
     color: var(--text-primary);
     text-align: start;
     padding: 0.75rem 1rem;
+    width: 100%;
     transition-property: background-color, box-shadow 0.2s;
     transition-duration: 0.2s;
 }
 
-.float-options-overlay {
-    position: fixed;
-    top: 0 !important;
-    left: 0 !important;
-    width: 100vw;
-    height: 100vh;
-    z-index: -1;
-}
-
 .float-options .float-btn:hover {
     background-color: var(--tweet-hover);
+}
+
+/* Common */
+
+.float-btn {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.float-btn.delete {
+    color: red;
 }
